examples/demo/tests/models/snapshots/can_create_with_password.snap
---
source: tests/models/main.rs
expression: res
---
Ok(
    Model {
        created_at: DATE,
        updated_at: DATE,
        id: ID
        pid: PID,
        email: "test@framework.com",
        password: "PASSWORD",
        name: "framework",
        reset_token: None,
        reset_sent_at: None,
    },
)
