examples/demo/tests/models/snapshots/can_find_by_pid.snap
---
source: tests/models/main.rs
expression: existing_user
---
Ok(
    Model {
        created_at: 2023-11-12T12:34:56.789,
        updated_at: 2023-11-12T12:34:56.789,
        id: 1,
        pid: 11111111-1111-1111-1111-111111111111,
        email: "user1@example.com",
        password: "$2b$12$gf4o2FShIahg/GY6YkK2wOcs8w4.lu444wP6BL3FyjX0GsxnEV6ZW",
        name: "user1",
        reset_token: None,
        reset_sent_at: None,
    },
)
