examples/demo/tests/models/snapshots/can_find_by_pid@users.snap
---
source: tests/models/users.rs
expression: existing_user
---
Ok(
    Model {
        created_at: 2023-11-12T12:34:56.789,
        updated_at: 2023-11-12T12:34:56.789,
        id: 1,
        pid: 11111111-1111-1111-1111-111111111111,
        email: "user1@example.com",
        password: "$argon2id$v=19$m=19456,t=2,p=1$JkBeJfBWoNlj4D684c568g$bKRQ+Ud8qwYGIaAu+x+4flGHPS4WJh3ylUUV4sEtDBY",
        name: "user1",
        reset_token: None,
        reset_sent_at: None,
        email_verification_token: None,
        email_verification_sent_at: None,
        email_verified_at: None,
    },
)
