examples/demo/tests/models/snapshots/can_validate_model@users.snap
---
source: tests/models/users.rs
expression: res
---
Err(
    Custom(
        "{\"name\":[{\"code\":\"length\",\"message\":\"Name must be at least 2 characters long.\"}],\"email\":[{\"code\":\"invalid email\",\"message\":null}]}",
    ),
)
